Lm Invite added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.servlet.multipart.max-file-size = 2MB
 spring.servlet.multipart.file-size-threshold = 1KB
 
 server.error.whitelabel.enabled=false
-client.url=https://assess.armezo.com/duflon/
+client.url=https://durecruit.duflon.com/tap/
 client.asseesment=https://assess.armezo.com/Armezo/
 cand.link=https://assess.armezo.com/duflon/candidateLogin
 #file.path=/home/msilazuser01/irecruit/
